Updating readme again.

--- a/README
+++ b/README
@@ -1,5 +1,3 @@
 Codename Lumberjack is a simple flash game written using Actionscript 3.0 and Flixel.
 
-Codename Lumberjack is being written as a way to delve into the world of FlashBuilder and GitHub, as I've never touched either of those before now. However, it can also provide as a tutorial to help new users of Flixel learn the reins to creating an adventure platformer.
-
-In the end it might become something more than a learning project with a codename, but we'll have to see. :)
+Codename Lumberjack is being written as a way to delve into the world of FlashBuilder and GitHub, as I've never touched either of those before now. However, it can also provide as a tutorial to help new users of Flixel learn the the very basics to creating a platformer.
