--- a/README
+++ b/README
@@ -1,3 +1,11 @@
 Codename Lumberjack is a simple flash game written using Actionscript 3.0 and Flixel.
 
-Codename Lumberjack is being written as a way to delve into the world of FlashBuilder and GitHub, as I've never touched either of those before now. However, it can also provide as a tutorial to help new users of Flixel learn the the very basics to creating a platformer.
+The game serves as a very basic tutorial for creating a simple adventure platformer in Flixel. It features:
+* Generating a world map from a color Bitmap (a future feature of Flixel, currently in the development and beta branches)
+* Various environments
+* Basic platforming physics and collision
+* Coin collecting
+
+It is very feature light in order to provide a lightweight entry into the world of Flixel platformers.
+
+Codename Lumberjack was originally being written as a way for me to delve into the world of FlashBuilder and GitHub, having never touched either of them.
